# uv-install-torch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
reset_repo/: reset_repo.fish  reset_repo.ps1  reset_repo.sh
