# Install with uv add -r requirements.txt --extra cu124
[project]
name = "uv-install-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=4.10.0.84",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1"
]
cu124 = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
]


# declare all extra tags
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]
environments = [
  "sys_platform == 'linux' and os_name == 'posix'"
]


# declare all index sources for each package for each extra tag
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'"  },
  { index = "pytorch-cu124", extra = "cu124"},
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'"  },
  { index = "pytorch-cu124", extra = "cu124"},
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" , marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu124", extra = "cu124"},
]


# declare an indexes
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# declare another indexes
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
