# Install with uv add -r requirements.txt --extra cu124
[project]
name = "uv-install-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
cpu = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1"
]
cu124 = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
]


# declare all extra tags
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]
environments = [
  "sys_platform == 'linux' and os_name == 'posix'"
]


# declare all index sources for each package for each extra tag
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'"  },
  { index = "pytorch-cu124", extra = "cu124"},
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'"  },
  { index = "pytorch-cu124", extra = "cu124"},
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" , marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu124", extra = "cu124"},
]


# declare an indexes
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# declare another indexes
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
