[project]
name = "uv-install-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1"
]
cu124 = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]
environments = [
  "sys_platform == 'linux' and os_name == 'posix'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu"},
  { index = "pytorch-cu124", extra = "cu124"},
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu"},
  { index = "pytorch-cu124", extra = "cu124"},
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu"},
  { index = "pytorch-cu124", extra = "cu124"},
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
